@@ -25,7 +25,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.Semaphore;
 import java.util.function.LongPredicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.elasticsearch.http.HttpStats.ClientStats.NOT_CLOSED;
@@ -35,7 +34,7 @@ import static org.elasticsearch.http.HttpStats.ClientStats.NOT_CLOSED;
  */
 public class HttpClientStatsTracker {
 
-    private static final Logger logger = LogManager.getLogger();
+    private static final Logger logger = LogManager.getLogger(HttpClientStatsTracker.class);
 
     private final ThreadPool threadPool;
 
@@ -90,7 +89,7 @@ public class HttpClientStatsTracker {
                 threadPool.absoluteTimeInMillis()
             )
         );
-        httpChannel.addCloseListener(ActionListener.wrap(() -> {
+        httpChannel.addCloseListener(ActionListener.running(() -> {
             try {
                 final ClientStatsBuilder disconnectedClientStats = httpChannelStats.remove(httpChannel);
                 if (disconnectedClientStats != null) {
@@ -146,9 +145,9 @@ public class HttpClientStatsTracker {
             final LongPredicate keepTimePredicate = closeTimeMillis -> currentTimeMillis - closeTimeMillis <= maxClosedChannelAgeMillis;
             pruneStaleClosedChannelStats(keepTimePredicate);
             return Stream.concat(
-                closedChannelStats.stream().filter(c -> keepTimePredicate.test(c.closedTimeMillis)),
+                closedChannelStats.stream().filter(c -> keepTimePredicate.test(c.closedTimeMillis())),
                 httpChannelStats.values().stream().map(c -> c.build(NOT_CLOSED))
-            ).collect(Collectors.toList());
+            ).toList();
         } else {
             // prune even if disabled since we don't prevent concurrently adding entries while being disabled
             httpChannelStats.clear();
@@ -165,7 +164,7 @@ public class HttpClientStatsTracker {
                     return;
                 }
 
-                if (keepTimePredicate.test(nextStats.closedTimeMillis)) {
+                if (keepTimePredicate.test(nextStats.closedTimeMillis())) {
                     // the list elements are pretty much in the order in which the channels were closed so keep all the remaining items
                     return;
                 }
