@@ -14,18 +14,18 @@ import org.elasticsearch.ExceptionsHelper;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.common.xcontent.LoggingDeprecationHandler;
+import org.elasticsearch.common.xcontent.XContentHelper;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.script.Script;
 import org.elasticsearch.script.ScriptService;
 import org.elasticsearch.script.ScriptType;
 import org.elasticsearch.script.TemplateScript;
-import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.xcontent.json.JsonXContent;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -216,6 +216,17 @@ public final class ConfigurationUtils {
         }
     }
 
+    @Nullable
+    public static Boolean readOptionalBooleanProperty(
+        String processorType,
+        String processorTag,
+        Map<String, Object> configuration,
+        String propertyName
+    ) {
+        Object value = configuration.remove(propertyName);
+        return readBoolean(processorType, processorTag, propertyName, value);
+    }
+
     private static Boolean readBoolean(String processorType, String processorTag, String propertyName, Object value) {
         if (value == null) {
             return null;
@@ -302,6 +313,27 @@ public final class ConfigurationUtils {
         Object value = configuration.remove(propertyName);
         if (value == null) {
             return null;
+        }
+        return readList(processorType, processorTag, propertyName, value);
+    }
+
+    /**
+     * Returns and removes the specified property of type list from the specified configuration map.
+     *
+     * If the property value isn't of type list or string an {@link ElasticsearchParseException} is thrown.
+     */
+    public static List<String> readOptionalListOrString(
+        String processorType,
+        String processorTag,
+        Map<String, Object> configuration,
+        String propertyName
+    ) {
+        Object value = configuration.remove(propertyName);
+        if (value == null) {
+            return List.of();
+        }
+        if (value instanceof String) {
+            return List.of(readString(processorType, processorTag, propertyName, value));
         }
         return readList(processorType, processorTag, propertyName, value);
     }
@@ -410,7 +442,7 @@ public final class ConfigurationUtils {
     ) {
         String mediaType = readStringProperty(processorType, processorTag, configuration, propertyName, defaultValue);
 
-        if (Arrays.asList(VALID_MEDIA_TYPES).contains(mediaType) == false) {
+        if (List.of(VALID_MEDIA_TYPES).contains(mediaType) == false) {
             throw newConfigurationException(
                 processorType,
                 processorTag,
@@ -477,7 +509,7 @@ public final class ConfigurationUtils {
             throw exception;
         }
 
-        return processors;
+        return Collections.unmodifiableList(processors);
     }
 
     public static TemplateScript.Factory readTemplateProperty(
@@ -504,7 +536,7 @@ public final class ConfigurationUtils {
             // modified if templating is not available so a script that simply returns an unmodified `propertyValue`
             // is returned.
             if (scriptService.isLangSupported(DEFAULT_TEMPLATE_LANG) && propertyValue.contains("{{")) {
-                Script script = new Script(ScriptType.INLINE, DEFAULT_TEMPLATE_LANG, propertyValue, Collections.emptyMap());
+                Script script = new Script(ScriptType.INLINE, DEFAULT_TEMPLATE_LANG, propertyValue, Map.of());
                 return scriptService.compile(script, TemplateScript.CONTEXT);
             } else {
                 return (params) -> new TemplateScript(params) {
@@ -589,7 +621,7 @@ public final class ConfigurationUtils {
                     );
                 }
                 if (onFailureProcessors.size() > 0 || ignoreFailure) {
-                    processor = new CompoundProcessor(ignoreFailure, Collections.singletonList(processor), onFailureProcessors);
+                    processor = new OnFailureProcessor(ignoreFailure, processor, onFailureProcessors);
                 }
                 if (conditionalScript != null) {
                     processor = new ConditionalProcessor(tag, description, conditionalScript, scriptService, processor);
@@ -607,9 +639,11 @@ public final class ConfigurationUtils {
         if (scriptSource != null) {
             try (
                 XContentBuilder builder = XContentBuilder.builder(JsonXContent.jsonXContent).map(normalizeScript(scriptSource));
-                InputStream stream = BytesReference.bytes(builder).streamInput();
-                XContentParser parser = XContentType.JSON.xContent()
-                    .createParser(NamedXContentRegistry.EMPTY, LoggingDeprecationHandler.INSTANCE, stream)
+                XContentParser parser = XContentHelper.createParserNotCompressed(
+                    LoggingDeprecationHandler.XCONTENT_PARSER_CONFIG,
+                    BytesReference.bytes(builder),
+                    XContentType.JSON
+                )
             ) {
                 return Script.parse(parser);
             }
@@ -622,7 +656,7 @@ public final class ConfigurationUtils {
         if (scriptConfig instanceof Map<?, ?>) {
             return (Map<String, Object>) scriptConfig;
         } else if (scriptConfig instanceof String) {
-            return Collections.singletonMap("source", scriptConfig);
+            return Map.of("source", scriptConfig);
         } else {
             throw newConfigurationException(
                 "conditional",
