@@ -12,8 +12,7 @@ import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.search.DocValueFormat;
 import org.elasticsearch.search.aggregations.AggregationReduceContext;
-import org.elasticsearch.search.aggregations.InternalAggregation;
-import org.elasticsearch.search.aggregations.metrics.InternalMax;
+import org.elasticsearch.search.aggregations.AggregatorReducer;
 import org.elasticsearch.search.aggregations.metrics.InternalNumericMetricsAggregation;
 import org.elasticsearch.search.aggregations.metrics.Percentile;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -22,10 +21,8 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Iterator;
-import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class InternalPercentilesBucket extends InternalNumericMetricsAggregation.MultiValue implements PercentilesBucket {
     private double[] percentiles;
@@ -42,7 +39,7 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
         DocValueFormat formatter,
         Map<String, Object> metadata
     ) {
-        super(name, metadata);
+        super(name, formatter, metadata);
         if ((percentiles.length == percents.length) == false) {
             throw new IllegalArgumentException(
                 "The number of provided percents and percentiles didn't match. percents: "
@@ -51,7 +48,6 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
                     + Arrays.toString(percentiles)
             );
         }
-        this.format = formatter;
         this.percentiles = percentiles;
         this.percents = percents;
         this.keyed = keyed;
@@ -69,7 +65,6 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
      */
     public InternalPercentilesBucket(StreamInput in) throws IOException {
         super(in);
-        format = in.readNamedWriteable(DocValueFormat.class);
         percentiles = in.readDoubleArray();
         percents = in.readDoubleArray();
         keyed = in.readBoolean();
@@ -121,16 +116,19 @@ public class InternalPercentilesBucket extends InternalNumericMetricsAggregation
 
     @Override
     public double value(String name) {
+        if (this.percents.length == 1 && this.name.equals(name)) {
+            return percentile(this.percents[0]);
+        }
         return percentile(Double.parseDouble(name));
     }
 
     @Override
     public Iterable<String> valueNames() {
-        return Arrays.stream(percents).mapToObj(d -> String.valueOf(d)).collect(Collectors.toList());
+        return Arrays.stream(percents).mapToObj(String::valueOf).toList();
     }
 
     @Override
-    public InternalMax reduce(List<InternalAggregation> aggregations, AggregationReduceContext reduceContext) {
+    protected AggregatorReducer getLeaderReducer(AggregationReduceContext reduceContext, int size) {
         throw new UnsupportedOperationException("Not supported");
     }
 
