@@ -10,9 +10,7 @@ package org.elasticsearch.upgrades;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchException;
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.admin.indices.alias.IndicesAliasesRequest;
 import org.elasticsearch.action.admin.indices.alias.IndicesAliasesRequestBuilder;
@@ -24,17 +22,19 @@ import org.elasticsearch.action.support.master.ShardsAcknowledgedResponse;
 import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.client.internal.ParentTaskAssigningClient;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.ClusterStateTaskExecutor;
 import org.elasticsearch.cluster.ClusterStateUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.metadata.MetadataCreateIndexService;
+import org.elasticsearch.cluster.metadata.MetadataIndexTemplateService;
 import org.elasticsearch.cluster.metadata.MetadataUpdateSettingsService;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.CheckedBiConsumer;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.core.CheckedConsumer;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.reindex.BulkByScrollResponse;
@@ -54,8 +54,9 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.action.admin.cluster.migration.TransportGetFeatureUpgradeStatusAction.NO_UPGRADE_REQUIRED_VERSION;
+import static org.elasticsearch.action.admin.cluster.migration.TransportGetFeatureUpgradeStatusAction.NO_UPGRADE_REQUIRED_INDEX_VERSION;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.State.CLOSE;
+import static org.elasticsearch.core.Strings.format;
 
 /**
  * This is where the logic to actually perform the migration lives - {@link SystemIndexMigrator#run(SystemIndexMigrationTaskState)} will
@@ -65,8 +66,6 @@ import static org.elasticsearch.cluster.metadata.IndexMetadata.State.CLOSE;
  */
 public class SystemIndexMigrator extends AllocatedPersistentTask {
     private static final Logger logger = LogManager.getLogger(SystemIndexMigrator.class);
-
-    private static final Version READY_FOR_MIGRATION_VERSION = Version.V_7_16_0;
 
     // Fixed properties & services
     private final ParentTaskAssigningClient baseClient;
@@ -117,7 +116,7 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
             stateIndexName = taskState.getCurrentIndex();
             stateFeatureName = taskState.getCurrentFeature();
 
-            SystemIndices.Feature feature = systemIndices.getFeatures().get(stateFeatureName);
+            SystemIndices.Feature feature = systemIndices.getFeature(stateFeatureName);
             if (feature == null) {
                 markAsFailed(
                     new IllegalStateException(
@@ -144,7 +143,6 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
             }
 
             systemIndices.getFeatures()
-                .values()
                 .stream()
                 .flatMap(feature -> SystemIndexMigrationInfo.fromFeature(feature, clusterState.metadata(), indexScopedSettings))
                 .filter(migrationInfo -> needsToBeMigrated(clusterState.metadata().index(migrationInfo.getCurrentIndexName())))
@@ -154,13 +152,10 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
             List<String> closedIndices = migrationQueue.stream()
                 .filter(SystemIndexMigrationInfo::isCurrentIndexClosed)
                 .map(SystemIndexMigrationInfo::getCurrentIndexName)
-                .collect(Collectors.toList());
+                .toList();
             if (closedIndices.isEmpty() == false) {
                 markAsFailed(
-                    new IllegalStateException(
-                        new ParameterizedMessage("indices must be open to be migrated, but indices {} are closed", closedIndices)
-                            .getFormattedMessage()
-                    )
+                    new IllegalStateException("indices must be open to be migrated, but indices " + closedIndices + " are closed")
                 );
                 return;
             }
@@ -187,16 +182,16 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
                         // If we don't have that index at all, and also don't have the next one
                         markAsFailed(
                             new IllegalStateException(
-                                new ParameterizedMessage(
-                                    "failed to resume system index migration from index [{}], that index is not present in the cluster",
+                                format(
+                                    "failed to resume system index migration from index [%s], that index is not present in the cluster",
                                     stateIndexName
-                                ).getFormattedMessage()
+                                )
                             )
                         );
                     }
                     logger.warn(
-                        new ParameterizedMessage(
-                            "resuming system index migration with index [{}], which does not match index given in last task state [{}]",
+                        () -> format(
+                            "resuming system index migration with index [%s], which does not match index given in last task state [%s]",
                             nextMigrationInfo.getCurrentIndexName(),
                             stateIndexName
                         )
@@ -300,16 +295,13 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
         MigrationResultsUpdateTask updateTask = MigrationResultsUpdateTask.upsert(
             lastMigrationInfo.getFeatureName(),
             SingleFeatureMigrationResult.success(),
-            ActionListener.wrap(
-                state -> {
-                    prepareNextIndex(
-                        state,
-                        clusterState -> migrateSingleIndex(clusterState, this::finishIndexAndLoop),
-                        lastMigrationInfo.getFeatureName()
-                    );
-                },
-                this::markAsFailed
-            )
+            ActionListener.wrap(state -> {
+                prepareNextIndex(
+                    state,
+                    clusterState -> migrateSingleIndex(clusterState, this::finishIndexAndLoop),
+                    lastMigrationInfo.getFeatureName()
+                );
+            }, this::markAsFailed)
         );
         updateTask.submit(clusterService);
     }
@@ -359,12 +351,12 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
         }, this::markAsFailed));
     }
 
-    private boolean needsToBeMigrated(IndexMetadata indexMetadata) {
+    private static boolean needsToBeMigrated(IndexMetadata indexMetadata) {
         assert indexMetadata != null : "null IndexMetadata should be impossible, we're not consistently using the same cluster state";
         if (indexMetadata == null) {
             return false;
         }
-        return indexMetadata.isSystem() && indexMetadata.getCreationVersion().before(NO_UPGRADE_REQUIRED_VERSION);
+        return indexMetadata.isSystem() && indexMetadata.getCreationVersion().before(NO_UPGRADE_REQUIRED_INDEX_VERSION);
     }
 
     private void migrateSingleIndex(ClusterState clusterState, Consumer<BulkByScrollResponse> listener) {
@@ -382,15 +374,51 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
         }
         Index oldIndex = imd.getIndex();
         String newIndexName = migrationInfo.getNextIndexName();
+
+        /**
+         * This should be on for all System indices except for .kibana_ indices. See allowsTemplates in KibanaPlugin.java for more info.
+         */
+        if (migrationInfo.allowsTemplates() == false) {
+            final String v2template = MetadataIndexTemplateService.findV2Template(clusterState.metadata(), newIndexName, false);
+            if (Objects.nonNull(v2template)) {
+                logger.error(
+                    "unable to create new index [{}] from feature [{}] because it would match composable template [{}]",
+                    newIndexName,
+                    migrationInfo.getFeatureName(),
+                    v2template
+                );
+                markAsFailed(
+                    new IllegalStateException(
+                        "unable to create new index [" + newIndexName + "] because it would match composable template [" + v2template + "]"
+                    )
+                );
+                return;
+            }
+            final List<IndexTemplateMetadata> v1templates = MetadataIndexTemplateService.findV1Templates(
+                clusterState.metadata(),
+                newIndexName,
+                false
+            );
+            if (v1templates.isEmpty() == false) {
+                logger.error(
+                    "unable to create new index [{}] from feature [{}] because it would match legacy templates [{}]",
+                    newIndexName,
+                    migrationInfo.getFeatureName(),
+                    v1templates
+                );
+                markAsFailed(
+                    new IllegalStateException(
+                        "unable to create new index [" + newIndexName + "] because it would match legacy templates [" + v1templates + "]"
+                    )
+                );
+                return;
+            }
+        }
+
         logger.info("migrating index [{}] from feature [{}] to new index [{}]", oldIndexName, migrationInfo.getFeatureName(), newIndexName);
         ActionListener<BulkByScrollResponse> innerListener = ActionListener.wrap(listener::accept, this::markAsFailed);
         try {
-            Exception versionException = checkNodeVersionsReadyForMigration(clusterState);
-            if (versionException != null) {
-                markAsFailed(versionException);
-                return;
-            }
-            createIndex(migrationInfo, ActionListener.wrap(shardsAcknowledgedResponse -> {
+            createIndex(migrationInfo, innerListener.delegateFailureAndWrap((delegate, shardsAcknowledgedResponse) -> {
                 logger.debug(
                     "while migrating [{}] , got create index response: [{}]",
                     oldIndexName,
@@ -399,49 +427,49 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
                 setWriteBlock(
                     oldIndex,
                     true,
-                    ActionListener.wrap(setReadOnlyResponse -> reindex(migrationInfo, ActionListener.wrap(bulkByScrollResponse -> {
-                        logger.debug(
-                            "while migrating [{}], got reindex response: [{}]",
-                            oldIndexName,
-                            Strings.toString(bulkByScrollResponse)
-                        );
-                        if ((bulkByScrollResponse.getBulkFailures() != null && bulkByScrollResponse.getBulkFailures().isEmpty() == false)
-                            || (bulkByScrollResponse.getSearchFailures() != null
-                                && bulkByScrollResponse.getSearchFailures().isEmpty() == false)) {
-                            removeReadOnlyBlockOnReindexFailure(
-                                oldIndex,
-                                innerListener,
-                                logAndThrowExceptionForFailures(bulkByScrollResponse)
-                            );
-                        } else {
-                            // Successful completion of reindexing - remove read only and delete old index
-                            setWriteBlock(
-                                oldIndex,
-                                false,
-                                ActionListener.wrap(
-                                    setAliasAndRemoveOldIndex(migrationInfo, bulkByScrollResponse, innerListener),
-                                    innerListener::onFailure
-                                )
-                            );
-                        }
-                    }, e -> {
-                        logger.error(
-                            new ParameterizedMessage(
-                                "error occurred while reindexing index [{}] from feature [{}] to destination index [{}]",
+                    delegate.delegateFailureAndWrap(
+                        (delegate2, setReadOnlyResponse) -> reindex(migrationInfo, ActionListener.wrap(bulkByScrollResponse -> {
+                            logger.debug(
+                                "while migrating [{}], got reindex response: [{}]",
                                 oldIndexName,
-                                migrationInfo.getFeatureName(),
-                                newIndexName
-                            ),
-                            e
-                        );
-                        removeReadOnlyBlockOnReindexFailure(oldIndex, innerListener, e);
-                    })), innerListener::onFailure)
+                                Strings.toString(bulkByScrollResponse)
+                            );
+                            if ((bulkByScrollResponse.getBulkFailures() != null
+                                && bulkByScrollResponse.getBulkFailures().isEmpty() == false)
+                                || (bulkByScrollResponse.getSearchFailures() != null
+                                    && bulkByScrollResponse.getSearchFailures().isEmpty() == false)) {
+                                removeReadOnlyBlockOnReindexFailure(
+                                    oldIndex,
+                                    delegate2,
+                                    logAndThrowExceptionForFailures(bulkByScrollResponse)
+                                );
+                            } else {
+                                // Successful completion of reindexing - remove read only and delete old index
+                                setWriteBlock(
+                                    oldIndex,
+                                    false,
+                                    delegate2.delegateFailureAndWrap(setAliasAndRemoveOldIndex(migrationInfo, bulkByScrollResponse))
+                                );
+                            }
+                        }, e -> {
+                            logger.error(
+                                () -> format(
+                                    "error occurred while reindexing index [%s] from feature [%s] to destination index [%s]",
+                                    oldIndexName,
+                                    migrationInfo.getFeatureName(),
+                                    newIndexName
+                                ),
+                                e
+                            );
+                            removeReadOnlyBlockOnReindexFailure(oldIndex, delegate2, e);
+                        }))
+                    )
                 );
-            }, innerListener::onFailure));
+            }));
         } catch (Exception ex) {
             logger.error(
-                new ParameterizedMessage(
-                    "error occurred while migrating index [{}] from feature [{}] to new index [{}]",
+                () -> format(
+                    "error occurred while migrating index [%s] from feature [%s] to new index [%s]",
                     oldIndexName,
                     migrationInfo.getFeatureName(),
                     newIndexName
@@ -473,10 +501,9 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
         metadataCreateIndexService.createIndex(createRequest, listener);
     }
 
-    private CheckedConsumer<AcknowledgedResponse, Exception> setAliasAndRemoveOldIndex(
+    private CheckedBiConsumer<ActionListener<BulkByScrollResponse>, AcknowledgedResponse, Exception> setAliasAndRemoveOldIndex(
         SystemIndexMigrationInfo migrationInfo,
-        BulkByScrollResponse bulkByScrollResponse,
-        ActionListener<BulkByScrollResponse> listener
+        BulkByScrollResponse bulkByScrollResponse
     ) {
         final IndicesAliasesRequestBuilder aliasesRequest = migrationInfo.createClient(baseClient).admin().indices().prepareAliases();
         aliasesRequest.removeIndex(migrationInfo.getCurrentIndexName());
@@ -498,8 +525,8 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
 
         // Technically this callback might have a different cluster state, but it shouldn't matter - these indices shouldn't be changing
         // while we're trying to migrate them.
-        return unsetReadOnlyResponse -> aliasesRequest.execute(
-            ActionListener.wrap(deleteIndexResponse -> listener.onResponse(bulkByScrollResponse), listener::onFailure)
+        return (listener, unsetReadOnlyResponse) -> aliasesRequest.execute(
+            listener.delegateFailureAndWrap((l, deleteIndexResponse) -> l.onResponse(bulkByScrollResponse))
         );
     }
 
@@ -529,7 +556,7 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
         setWriteBlock(index, false, ActionListener.wrap(unsetReadOnlyResponse -> listener.onFailure(ex), e1 -> listener.onFailure(ex)));
     }
 
-    private ElasticsearchException logAndThrowExceptionForFailures(BulkByScrollResponse bulkByScrollResponse) {
+    private static ElasticsearchException logAndThrowExceptionForFailures(BulkByScrollResponse bulkByScrollResponse) {
         String bulkFailures = (bulkByScrollResponse.getBulkFailures() != null)
             ? Strings.collectionToCommaDelimitedString(bulkByScrollResponse.getBulkFailures())
             : "";
@@ -566,27 +593,13 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
         super.markAsFailed(e);
     }
 
-    private static Exception checkNodeVersionsReadyForMigration(ClusterState state) {
-        final Version minNodeVersion = state.nodes().getMinNodeVersion();
-        if (minNodeVersion.before(READY_FOR_MIGRATION_VERSION)) {
-            return new IllegalStateException(
-                "all nodes must be on version ["
-                    + READY_FOR_MIGRATION_VERSION
-                    + "] or later to migrate feature indices but lowest node version currently in cluster is ["
-                    + minNodeVersion
-                    + "]"
-            );
-        }
-        return null;
-    }
-
     /**
      * Creates a task that will clear the results of previous migration attempts.
      * @param clusterService The cluster service.
      * @param listener A listener that will be called upon successfully updating the cluster state.
      */
     private static void clearResults(ClusterService clusterService, ActionListener<ClusterState> listener) {
-        clusterService.submitStateUpdateTask("clear migration results", new ClusterStateUpdateTask() {
+        submitUnbatchedTask(clusterService, "clear migration results", new ClusterStateUpdateTask() {
             @Override
             public ClusterState execute(ClusterState currentState) throws Exception {
                 if (currentState.metadata().custom(FeatureMigrationResults.TYPE) != null) {
@@ -607,8 +620,17 @@ public class SystemIndexMigrator extends AllocatedPersistentTask {
                 logger.error("failed to clear migration results when starting new migration", e);
                 listener.onFailure(e);
             }
-        }, ClusterStateTaskExecutor.unbatched());
+        });
         logger.debug("submitted update task to clear migration results");
+    }
+
+    @SuppressForbidden(reason = "legacy usage of unbatched task") // TODO add support for batching here
+    private static void submitUnbatchedTask(
+        ClusterService clusterService,
+        @SuppressWarnings("SameParameterValue") String source,
+        ClusterStateUpdateTask task
+    ) {
+        clusterService.submitUnbatchedStateUpdateTask(source, task);
     }
 
     private SystemIndexMigrationInfo currentMigrationInfo() {
