@@ -8,20 +8,16 @@
 
 package org.elasticsearch.action.fieldcaps;
 
-import com.carrotsearch.hppc.ObjectIntHashMap;
-import com.carrotsearch.hppc.ObjectIntMap;
-import com.carrotsearch.hppc.cursors.IntCursor;
-import com.carrotsearch.hppc.cursors.ObjectIntCursor;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.SetOnce;
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.action.OriginalIndices;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.EmptyClusterInfoService;
+import org.elasticsearch.cluster.TestShardRoutingRoleStrategies;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
@@ -37,6 +33,7 @@ import org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDeci
 import org.elasticsearch.cluster.routing.allocation.decider.ReplicaAfterPrimaryActiveAllocationDecider;
 import org.elasticsearch.cluster.routing.allocation.decider.SameShardAllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.common.Randomness;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.network.NetworkService;
 import org.elasticsearch.common.settings.ClusterSettings;
@@ -45,13 +42,16 @@ import org.elasticsearch.common.util.PageCacheRecycler;
 import org.elasticsearch.common.util.concurrent.AbstractRunnable;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
 import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.index.IndexVersions;
 import org.elasticsearch.index.query.QueryBuilder;
 import org.elasticsearch.index.query.RangeQueryBuilder;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.indices.breaker.NoneCircuitBreakerService;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.tasks.TaskId;
+import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.test.gateway.TestGatewayAllocator;
+import org.elasticsearch.test.index.IndexVersionUtils;
 import org.elasticsearch.threadpool.TestThreadPool;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TcpTransport;
@@ -81,8 +81,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import static org.elasticsearch.action.fieldcaps.FieldCapabilitiesResponseTests.randomIndexResponse;
-import static org.elasticsearch.test.VersionUtils.randomVersion;
+import static org.elasticsearch.common.settings.ClusterSettings.createBuiltInClusterSettings;
 import static org.hamcrest.Matchers.anEmptyMap;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.everyItem;
@@ -103,21 +102,19 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     static final Logger logger = LogManager.getLogger(RequestDispatcherTests.class);
 
     public void testHappyCluster() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(random()), IndexVersionUtils.randomVersion()));
             }
             Metadata.Builder metadata = Metadata.builder();
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 2))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(0, 2)))
+                );
             }
             clusterState = newClusterState(metadata.build(), discoNodes.build());
         }
@@ -174,21 +171,19 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testRetryThenOk() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(2, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(random()), IndexVersionUtils.randomVersion()));
             }
             Metadata.Builder metadata = Metadata.builder();
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(1, 3))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(1, 3)))
+                );
             }
             clusterState = newClusterState(metadata.build(), discoNodes.build());
         }
@@ -261,9 +256,9 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             assertThat(dispatcher.executionRound(), equalTo(maxRound + 1));
             for (String index : indices) {
                 if (withFilter) {
-                    ObjectIntMap<ShardId> copies = new ObjectIntHashMap<>();
+                    Map<ShardId, Integer> copies = new HashMap<>();
                     for (ShardRouting shardRouting : clusterState.routingTable().index(index).randomAllActiveShardsIt()) {
-                        copies.addTo(shardRouting.shardId(), 1);
+                        copies.merge(shardRouting.shardId(), 1, Integer::sum);
                     }
                     final int executedRounds = maxFailedRounds.getOrDefault(index, 0);
                     for (int round = 0; round <= executedRounds; round++) {
@@ -274,10 +269,10 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
                             }
                         }
                         final Set<ShardId> availableShards = new HashSet<>();
-                        for (ObjectIntCursor<ShardId> e : copies) {
-                            if (e.value > 0) {
-                                availableShards.add(e.key);
-                                copies.addTo(e.key, -1);
+                        for (var e : copies.entrySet()) {
+                            if (e.getValue() > 0) {
+                                availableShards.add(e.getKey());
+                                copies.merge(e.getKey(), -1, Integer::sum);
                             }
                         }
                         assertThat("round: " + round, requestedShards, equalTo(availableShards));
@@ -296,21 +291,19 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testRetryButFails() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(random()), IndexVersionUtils.randomVersion()));
             }
             Metadata.Builder metadata = Metadata.builder();
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 3))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(0, 3)))
+                );
             }
             clusterState = newClusterState(metadata.build(), discoNodes.build());
         }
@@ -381,9 +374,9 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             assertThat(dispatcher.executionRound(), equalTo(maxRound));
             for (String index : indices) {
                 if (withFilter) {
-                    ObjectIntMap<ShardId> copies = new ObjectIntHashMap<>();
+                    Map<ShardId, Integer> copies = new HashMap<>();
                     for (ShardRouting shardRouting : clusterState.routingTable().index(index).randomAllActiveShardsIt()) {
-                        copies.addTo(shardRouting.shardId(), 1);
+                        copies.merge(shardRouting.shardId(), 1, Integer::sum);
                     }
                     final int executedRounds = failedIndices.contains(index) ? maxPossibleRounds(clusterState, index, true) : 0;
                     for (int round = 0; round <= executedRounds; round++) {
@@ -394,17 +387,17 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
                             }
                         }
                         final Set<ShardId> availableShards = new HashSet<>();
-                        for (ObjectIntCursor<ShardId> e : copies) {
-                            if (e.value > 0) {
-                                availableShards.add(e.key);
-                                copies.addTo(e.key, -1);
+                        for (var e : copies.entrySet()) {
+                            if (e.getValue() > 0) {
+                                availableShards.add(e.getKey());
+                                copies.merge(e.getKey(), -1, Integer::sum);
                             }
                         }
                         assertThat("round: " + round, requestedShards, equalTo(availableShards));
                     }
                     if (failedIndices.contains(index)) {
-                        for (ObjectIntCursor<ShardId> cursor : copies) {
-                            assertThat("All copies of shard " + cursor.key + " must be tried", cursor.value, equalTo(0));
+                        for (var e : copies.entrySet()) {
+                            assertThat("All copies of shard " + e.getKey() + " must be tried", e.getValue(), equalTo(0));
                         }
                     }
                 } else {
@@ -420,21 +413,19 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testSuccessWithAnyMatch() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(random()), IndexVersionUtils.randomVersion()));
             }
             Metadata.Builder metadata = Metadata.builder();
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(2, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 2))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(2, 10), between(0, 2)))
+                );
             }
             clusterState = newClusterState(metadata.build(), discoNodes.build());
         }
@@ -458,7 +449,6 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             );
             final RequestTracker requestTracker = new RequestTracker(dispatcher, clusterState.routingTable(), withFilter);
             transportService.requestTracker.set(requestTracker);
-            final AtomicInteger failedTimes = new AtomicInteger();
             final Set<ShardId> allUnmatchedShardIds = new HashSet<>();
             for (String index : indices) {
                 final Set<ShardId> shardIds = new HashSet<>();
@@ -519,22 +509,19 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     public void testStopAfterAllShardsUnmatched() throws Exception {
-        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).collect(Collectors.toList());
+        final List<String> allIndices = IntStream.rangeClosed(1, 5).mapToObj(n -> "index_" + n).toList();
         final ClusterState clusterState;
-        final boolean newVersionOnly = randomBoolean();
         {
             DiscoveryNodes.Builder discoNodes = DiscoveryNodes.builder();
             int numNodes = randomIntBetween(1, 10);
             for (int i = 0; i < numNodes; i++) {
-                discoNodes.add(newNode("node_" + i, randomVersion(random())));
+                discoNodes.add(newNode("node_" + i, VersionUtils.randomVersion(random()), IndexVersionUtils.randomVersion()));
             }
             Metadata.Builder metadata = Metadata.builder();
             for (String index : allIndices) {
-                final Settings.Builder settings = Settings.builder()
-                    .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, between(1, 10))
-                    .put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, between(0, 2))
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT.minimumIndexCompatibilityVersion());
-                metadata.put(IndexMetadata.builder(index).settings(settings));
+                metadata.put(
+                    IndexMetadata.builder(index).settings(indexSettings(IndexVersions.MINIMUM_COMPATIBLE, between(1, 10), between(0, 2)))
+                );
             }
             clusterState = newClusterState(metadata.build(), discoNodes.build());
         }
@@ -558,7 +545,6 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             );
             final RequestTracker requestTracker = new RequestTracker(dispatcher, clusterState.routingTable(), withFilter);
             transportService.requestTracker.set(requestTracker);
-            final AtomicInteger failedTimes = new AtomicInteger();
             final List<String> unmatchedIndices = randomSubsetOf(between(1, indices.size()), indices);
             transportService.setTransportInterceptor(new TransportInterceptor.AsyncSender() {
                 @Override
@@ -654,13 +640,13 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             }
             for (int i = 0; i < lastRound; i++) {
                 int round = i;
-                List<NodeRequest> nodeRequests = sentNodeRequests.stream().filter(r -> r.round == round).collect(Collectors.toList());
+                List<NodeRequest> nodeRequests = sentNodeRequests.stream().filter(r -> r.round == round).toList();
                 if (withFilter == false) {
                     // Without filter, each index is requested once in each round.
-                    ObjectIntMap<String> requestsPerIndex = new ObjectIntHashMap<>();
-                    nodeRequests.forEach(r -> r.indices().forEach(index -> requestsPerIndex.addTo(index, 1)));
-                    for (ObjectIntCursor<String> e : requestsPerIndex) {
-                        assertThat("index " + e.key + " has requested more than once", e.value, equalTo(1));
+                    Map<String, Integer> requestsPerIndex = new HashMap<>();
+                    nodeRequests.forEach(r -> r.indices().forEach(index -> requestsPerIndex.merge(index, 1, Integer::sum)));
+                    for (var e : requestsPerIndex.entrySet()) {
+                        assertThat("index " + e.getKey() + " has requested more than once", e.getValue(), equalTo(1));
                     }
                 }
                 // With or without filter, each new node receives at most one request each round
@@ -711,11 +697,11 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
         }
 
         List<NodeRequest> nodeRequests(String index, int round) {
-            return sentNodeRequests.stream().filter(r -> r.round == round && r.indices().contains(index)).collect(Collectors.toList());
+            return sentNodeRequests.stream().filter(r -> r.round == round && r.indices().contains(index)).toList();
         }
 
         List<NodeRequest> nodeRequests(String index) {
-            return sentNodeRequests.stream().filter(r -> r.indices().contains(index)).collect(Collectors.toList());
+            return sentNodeRequests.stream().filter(r -> r.indices().contains(index)).toList();
         }
     }
 
@@ -746,7 +732,7 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             final TestThreadPool threadPool = new TestThreadPool("test");
             TcpTransport transport = new Netty4Transport(
                 Settings.EMPTY,
-                Version.CURRENT,
+                TransportVersion.current(),
                 threadPool,
                 new NetworkService(Collections.emptyList()),
                 PageCacheRecycler.NON_RECYCLING_INSTANCE,
@@ -839,9 +825,19 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
         for (ShardId shardId : failedShards) {
             failures.put(shardId, new IllegalStateException(randomAlphaOfLength(10)));
         }
-        final List<FieldCapabilitiesIndexResponse> indexResponses = successIndices.stream()
-            .map(index -> randomIndexResponse(index, true))
-            .collect(Collectors.toList());
+        final List<FieldCapabilitiesIndexResponse> indexResponses = new ArrayList<>();
+        Map<String, List<String>> indicesWithMappingHash = new HashMap<>();
+        for (String index : successIndices) {
+            if (randomBoolean()) {
+                indicesWithMappingHash.computeIfAbsent(index, k -> new ArrayList<>()).add(index);
+            } else {
+                indexResponses.add(
+                    new FieldCapabilitiesIndexResponse(index, null, FieldCapabilitiesIndexResponseTests.randomFieldCaps(), true)
+                );
+            }
+        }
+        indexResponses.addAll(FieldCapabilitiesIndexResponseTests.randomIndexResponsesWithMappingHash(indicesWithMappingHash));
+        Randomness.shuffle(indexResponses);
         return new FieldCapabilitiesNodeResponse(indexResponses, failures, unmatchedShards);
     }
 
@@ -888,7 +884,7 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     }
 
     private ClusterState newClusterState(Metadata metadata, DiscoveryNodes discoveryNodes) {
-        final RoutingTable.Builder routingTable = RoutingTable.builder();
+        final RoutingTable.Builder routingTable = RoutingTable.builder(TestShardRoutingRoleStrategies.DEFAULT_ROLE_ONLY);
         for (IndexMetadata imd : metadata) {
             routingTable.addAsNew(metadata.index(imd.getIndex()));
         }
@@ -898,10 +894,10 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
             .routingTable(routingTable.build())
             .build();
         final Settings settings = Settings.EMPTY;
-        final ClusterSettings clusterSettings = new ClusterSettings(settings, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
+        final ClusterSettings clusterSettings = createBuiltInClusterSettings(settings);
         final ArrayList<AllocationDecider> deciders = new ArrayList<>();
-        deciders.add(new EnableAllocationDecider(settings, clusterSettings));
-        deciders.add(new SameShardAllocationDecider(settings, clusterSettings));
+        deciders.add(new EnableAllocationDecider(clusterSettings));
+        deciders.add(new SameShardAllocationDecider(clusterSettings));
         deciders.add(new ReplicaAfterPrimaryActiveAllocationDecider());
         Collections.shuffle(deciders, random());
         final MockAllocationService allocationService = new MockAllocationService(
@@ -920,23 +916,23 @@ public class RequestDispatcherTests extends ESAllocationTestCase {
     static int maxPossibleRounds(ClusterState clusterState, String index, boolean withFilter) {
         final IndexRoutingTable routingTable = clusterState.routingTable().index(index);
         if (withFilter) {
-            ObjectIntMap<ShardId> numCopiesPerShard = new ObjectIntHashMap<>();
+            Map<ShardId, Integer> numCopiesPerShard = new HashMap<>();
             for (ShardRouting shard : routingTable.randomAllActiveShardsIt()) {
-                numCopiesPerShard.addTo(shard.shardId(), 1);
+                numCopiesPerShard.merge(shard.shardId(), 1, Integer::sum);
             }
             int maxRound = 0;
-            for (ObjectIntCursor<ShardId> numCopies : numCopiesPerShard) {
-                maxRound = Math.max(maxRound, numCopies.value);
+            for (var numCopies : numCopiesPerShard.values()) {
+                maxRound = Math.max(maxRound, numCopies);
             }
             return maxRound;
         } else {
-            ObjectIntMap<String> requestsPerNode = new ObjectIntHashMap<>();
+            Map<String, Integer> requestsPerNode = new HashMap<>();
             for (ShardRouting shard : routingTable.randomAllActiveShardsIt()) {
                 requestsPerNode.put(shard.currentNodeId(), 1);
             }
             int totalRequests = 0;
-            for (IntCursor cursor : requestsPerNode.values()) {
-                totalRequests += cursor.value;
+            for (var nodeRequests : requestsPerNode.values()) {
+                totalRequests += nodeRequests;
             }
             return totalRequests;
         }
