@@ -8,13 +8,14 @@
 
 package org.elasticsearch.cluster.metadata;
 
-import org.elasticsearch.Version;
+import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.Index;
+import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.index.mapper.MapperService;
 import org.elasticsearch.index.mapper.MapperServiceTestCase;
 import org.elasticsearch.indices.EmptySystemIndices;
@@ -22,7 +23,6 @@ import org.elasticsearch.indices.EmptySystemIndices;
 import java.io.IOException;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.generateMapping;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -61,7 +61,7 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                 Metadata.builder()
                     .put(
                         IndexMetadata.builder("foo")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(filteredAlias)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
@@ -90,7 +90,7 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                 Metadata.builder()
                     .put(
                         IndexMetadata.builder("foo")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(aliasWithRouting)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
@@ -119,28 +119,28 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                 Metadata.builder()
                     .put(
                         IndexMetadata.builder("foo1")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
                     )
                     .put(
                         IndexMetadata.builder("foo2")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
                     )
                     .put(
                         IndexMetadata.builder("foo3")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
                     )
                     .put(
                         IndexMetadata.builder("foo4")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
@@ -170,28 +170,28 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                 Metadata.builder()
                     .put(
                         IndexMetadata.builder("foo1")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
                     )
                     .put(
                         IndexMetadata.builder("foo2")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
                     )
                     .put(
                         IndexMetadata.builder("foo3")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
                     )
                     .put(
                         IndexMetadata.builder("foo4")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(AliasMetadata.builder(aliasName).writeIndex(true))
                             .numberOfShards(1)
                             .numberOfReplicas(0)
@@ -213,14 +213,14 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                 Metadata.builder()
                     .put(
                         IndexMetadata.builder("foo1")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
                     )
                     .put(
                         IndexMetadata.builder("foo2")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .putAlias(alias2)
                             .numberOfShards(1)
@@ -228,7 +228,7 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                     )
                     .put(
                         IndexMetadata.builder("foo3")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .putAlias(alias2)
                             .numberOfShards(1)
@@ -236,7 +236,7 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                     )
                     .put(
                         IndexMetadata.builder("foo4")
-                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+                            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
                             .putAlias(alias1)
                             .numberOfShards(1)
                             .numberOfReplicas(0)
@@ -259,14 +259,14 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
         String dataStreamName = "foo";
         AliasMetadata alias = AliasMetadata.builder(dataStreamName).build();
         IndexMetadata foo1 = IndexMetadata.builder("foo1")
-            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
             .putAlias(AliasMetadata.builder(dataStreamName).writeIndex(true).build())
             .numberOfShards(1)
             .numberOfReplicas(0)
             .putMapping(generateMapping("@timestamp", "date"))
             .build();
         IndexMetadata foo2 = IndexMetadata.builder("foo2")
-            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
             .putAlias(alias)
             .numberOfShards(1)
             .numberOfReplicas(0)
@@ -279,34 +279,32 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                     .put(foo2, false)
                     .put(
                         "template",
-                        new ComposableIndexTemplate(
-                            List.of(dataStreamName + "*"),
-                            null,
-                            null,
-                            null,
-                            null,
-                            null,
-                            new ComposableIndexTemplate.DataStreamTemplate()
-                        )
+                        ComposableIndexTemplate.builder()
+                            .indexPatterns(List.of(dataStreamName + "*"))
+                            .dataStreamTemplate(new ComposableIndexTemplate.DataStreamTemplate())
+                            .build()
                     )
             )
             .build();
 
         ClusterState newState = MetadataMigrateToDataStreamService.migrateToDataStream(
             cs,
+            randomBoolean(),
             this::getMapperService,
             new MetadataMigrateToDataStreamService.MigrateToDataStreamClusterStateUpdateRequest(
                 dataStreamName,
                 TimeValue.ZERO,
                 TimeValue.ZERO
             ),
-            getMetadataCreateIndexService()
+            getMetadataCreateIndexService(),
+            Settings.EMPTY,
+            ActionListener.noop()
         );
         IndexAbstraction ds = newState.metadata().getIndicesLookup().get(dataStreamName);
         assertThat(ds, notNullValue());
         assertThat(ds.getType(), equalTo(IndexAbstraction.Type.DATA_STREAM));
         assertThat(ds.getIndices().size(), equalTo(2));
-        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).collect(Collectors.toList());
+        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).toList();
         assertThat(backingIndexNames, containsInAnyOrder("foo1", "foo2"));
         assertThat(ds.getWriteIndex().getName(), equalTo("foo1"));
         for (Index index : ds.getIndices()) {
@@ -320,14 +318,14 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
         String dataStreamName = "foo";
         AliasMetadata alias = AliasMetadata.builder(dataStreamName).build();
         IndexMetadata foo1 = IndexMetadata.builder("foo1")
-            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
             .putAlias(AliasMetadata.builder(dataStreamName).writeIndex(true).build())
             .numberOfShards(1)
             .numberOfReplicas(0)
             .putMapping(generateMapping("@timestamp", "date"))
             .build();
         IndexMetadata foo2 = IndexMetadata.builder("foo2")
-            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
             .putAlias(alias)
             .numberOfShards(1)
             .numberOfReplicas(0)
@@ -340,34 +338,32 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                     .put(foo2, false)
                     .put(
                         "template",
-                        new ComposableIndexTemplate(
-                            List.of(dataStreamName + "*"),
-                            null,
-                            null,
-                            null,
-                            null,
-                            null,
-                            new ComposableIndexTemplate.DataStreamTemplate()
-                        )
+                        ComposableIndexTemplate.builder()
+                            .indexPatterns(List.of(dataStreamName + "*"))
+                            .dataStreamTemplate(new ComposableIndexTemplate.DataStreamTemplate())
+                            .build()
                     )
             )
             .build();
 
         ClusterState newState = MetadataMigrateToDataStreamService.migrateToDataStream(
             cs,
+            randomBoolean(),
             this::getMapperService,
             new MetadataMigrateToDataStreamService.MigrateToDataStreamClusterStateUpdateRequest(
                 dataStreamName,
                 TimeValue.ZERO,
                 TimeValue.ZERO
             ),
-            getMetadataCreateIndexService()
+            getMetadataCreateIndexService(),
+            Settings.EMPTY,
+            ActionListener.noop()
         );
         IndexAbstraction ds = newState.metadata().getIndicesLookup().get(dataStreamName);
         assertThat(ds, notNullValue());
         assertThat(ds.getType(), equalTo(IndexAbstraction.Type.DATA_STREAM));
         assertThat(ds.getIndices().size(), equalTo(2));
-        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).collect(Collectors.toList());
+        List<String> backingIndexNames = ds.getIndices().stream().map(Index::getName).toList();
         assertThat(backingIndexNames, containsInAnyOrder("foo1", "foo2"));
         assertThat(ds.getWriteIndex().getName(), equalTo("foo1"));
         for (Index index : ds.getIndices()) {
@@ -377,18 +373,18 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
         }
     }
 
-    public void testCreateDataStreamWithoutSuppliedWriteIndex() throws Exception {
+    public void testCreateDataStreamWithoutSuppliedWriteIndex() {
         String dataStreamName = "foo";
         AliasMetadata alias = AliasMetadata.builder(dataStreamName).build();
         IndexMetadata foo1 = IndexMetadata.builder("foo1")
-            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
             .putAlias(alias)
             .numberOfShards(1)
             .numberOfReplicas(0)
             .putMapping(generateMapping("@timestamp", "date"))
             .build();
         IndexMetadata foo2 = IndexMetadata.builder("foo2")
-            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT))
+            .settings(Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current()))
             .putAlias(alias)
             .numberOfShards(1)
             .numberOfReplicas(0)
@@ -401,15 +397,10 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
                     .put(foo2, false)
                     .put(
                         "template",
-                        new ComposableIndexTemplate(
-                            List.of(dataStreamName + "*"),
-                            null,
-                            null,
-                            null,
-                            null,
-                            null,
-                            new ComposableIndexTemplate.DataStreamTemplate()
-                        )
+                        ComposableIndexTemplate.builder()
+                            .indexPatterns(List.of(dataStreamName + "*"))
+                            .dataStreamTemplate(new ComposableIndexTemplate.DataStreamTemplate())
+                            .build()
                     )
             )
             .build();
@@ -418,13 +409,16 @@ public class MetadataMigrateToDataStreamServiceTests extends MapperServiceTestCa
             IllegalArgumentException.class,
             () -> MetadataMigrateToDataStreamService.migrateToDataStream(
                 cs,
+                randomBoolean(),
                 this::getMapperService,
                 new MetadataMigrateToDataStreamService.MigrateToDataStreamClusterStateUpdateRequest(
                     dataStreamName,
                     TimeValue.ZERO,
                     TimeValue.ZERO
                 ),
-                getMetadataCreateIndexService()
+                getMetadataCreateIndexService(),
+                Settings.EMPTY,
+                ActionListener.noop()
             )
         );
         assertThat(e.getMessage(), containsString("alias [" + dataStreamName + "] must specify a write index"));
