@@ -9,21 +9,17 @@
 package org.elasticsearch.discovery;
 
 import org.apache.logging.log4j.Level;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.elasticsearch.Version;
+import org.elasticsearch.TransportVersion;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
-import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.network.NetworkAddress;
 import org.elasticsearch.common.network.NetworkService;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.BoundTransportAddress;
 import org.elasticsearch.common.transport.TransportAddress;
 import org.elasticsearch.common.util.PageCacheRecycler;
-import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.common.util.concurrent.FutureUtils;
-import org.elasticsearch.core.internal.io.IOUtils;
+import org.elasticsearch.core.IOUtils;
 import org.elasticsearch.indices.breaker.NoneCircuitBreakerService;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.MockLogAppender;
@@ -48,8 +44,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.Stack;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
@@ -67,7 +61,6 @@ public class SeedHostsResolverTests extends ESTestCase {
     private List<TransportAddress> transportAddresses;
     private SeedHostsResolver seedHostsResolver;
     private ThreadPool threadPool;
-    private ExecutorService executorService;
     // close in reverse order as opened
     private Stack<Closeable> closeables;
 
@@ -75,23 +68,11 @@ public class SeedHostsResolverTests extends ESTestCase {
     public void startResolver() {
         threadPool = new TestThreadPool("node");
         transportAddresses = new ArrayList<>();
+        closeables = new Stack<>();
 
         TransportService transportService = mock(TransportService.class);
         when(transportService.getThreadPool()).thenReturn(threadPool);
-
         recreateSeedHostsResolver(transportService);
-
-        final ThreadFactory threadFactory = EsExecutors.daemonThreadFactory("[" + getClass().getName() + "]");
-        executorService = EsExecutors.newScaling(
-            getClass().getName() + "/" + getTestName(),
-            0,
-            2,
-            60,
-            TimeUnit.SECONDS,
-            threadFactory,
-            threadPool.getThreadContext()
-        );
-        closeables = new Stack<>();
     }
 
     private void recreateSeedHostsResolver(TransportService transportService) {
@@ -118,7 +99,6 @@ public class SeedHostsResolverTests extends ESTestCase {
             }
             IOUtils.close(reverse);
         } finally {
-            terminate(executorService);
             terminate(threadPool);
         }
     }
@@ -134,11 +114,7 @@ public class SeedHostsResolverTests extends ESTestCase {
         }
 
         seedHostsResolver.resolveConfiguredHosts(resolvedAddresses -> {
-            try {
-                assertTrue(startLatch.await(30, TimeUnit.SECONDS));
-            } catch (InterruptedException e) {
-                throw new AssertionError(e);
-            }
+            safeAwait(startLatch);
             resolvedAddressesRef.set(resolvedAddresses);
             endLatch.countDown();
         });
@@ -156,7 +132,7 @@ public class SeedHostsResolverTests extends ESTestCase {
         final InetAddress loopbackAddress = InetAddress.getLoopbackAddress();
         final Transport transport = new Netty4Transport(
             Settings.EMPTY,
-            Version.CURRENT,
+            TransportVersion.current(),
             threadPool,
             networkService,
             PageCacheRecycler.NON_RECYCLING_INSTANCE,
@@ -185,9 +161,7 @@ public class SeedHostsResolverTests extends ESTestCase {
         );
         closeables.push(transportService);
         recreateSeedHostsResolver(transportService);
-        List<String> hosts = IntStream.range(9300, 9310)
-            .mapToObj(port -> NetworkAddress.format(loopbackAddress) + ":" + port)
-            .collect(Collectors.toList());
+        List<String> hosts = IntStream.range(9300, 9310).mapToObj(port -> NetworkAddress.format(loopbackAddress) + ":" + port).toList();
         final List<TransportAddress> transportAddresses = seedHostsResolver.resolveHosts(hosts);
         assertThat(transportAddresses, hasSize(7));
         final Set<Integer> ports = new HashSet<>();
@@ -198,13 +172,13 @@ public class SeedHostsResolverTests extends ESTestCase {
         assertThat(ports, equalTo(IntStream.range(9303, 9310).boxed().collect(Collectors.toSet())));
     }
 
-    public void testUnknownHost() throws IllegalAccessException {
+    public void testUnknownHost() {
         final NetworkService networkService = new NetworkService(Collections.emptyList());
         final String hostname = randomAlphaOfLength(8);
         final UnknownHostException unknownHostException = new UnknownHostException(hostname);
         final Transport transport = new Netty4Transport(
             Settings.EMPTY,
-            Version.CURRENT,
+            TransportVersion.current(),
             threadPool,
             networkService,
             PageCacheRecycler.NON_RECYCLING_INSTANCE,
@@ -241,13 +215,11 @@ public class SeedHostsResolverTests extends ESTestCase {
         closeables.push(transportService);
         recreateSeedHostsResolver(transportService);
 
-        final Logger logger = LogManager.getLogger(SeedHostsResolver.class);
         final MockLogAppender appender = new MockLogAppender();
-        appender.start();
         appender.addExpectation(
             new MockLogAppender.ExceptionSeenEventExpectation(
                 getTestName(),
-                logger.getName(),
+                SeedHostsResolver.class.getCanonicalName(),
                 Level.WARN,
                 "failed to resolve host [" + hostname + "]",
                 UnknownHostException.class,
@@ -255,24 +227,18 @@ public class SeedHostsResolverTests extends ESTestCase {
             )
         );
 
-        try {
-            Loggers.addAppender(logger, appender);
-            final List<TransportAddress> transportAddresses = seedHostsResolver.resolveHosts(Collections.singletonList(hostname));
-
-            assertThat(transportAddresses, empty());
+        try (var ignored = appender.capturing(SeedHostsResolver.class)) {
+            assertThat(seedHostsResolver.resolveHosts(Collections.singletonList(hostname)), empty());
             appender.assertAllExpectationsMatched();
-        } finally {
-            Loggers.removeAppender(logger, appender);
-            appender.stop();
         }
     }
 
-    public void testResolveTimeout() throws IllegalAccessException {
+    public void testResolveTimeout() {
         final NetworkService networkService = new NetworkService(Collections.emptyList());
         final CountDownLatch latch = new CountDownLatch(1);
         final Transport transport = new Netty4Transport(
             Settings.EMPTY,
-            Version.CURRENT,
+            TransportVersion.current(),
             threadPool,
             networkService,
             PageCacheRecycler.NON_RECYCLING_INSTANCE,
@@ -320,13 +286,11 @@ public class SeedHostsResolverTests extends ESTestCase {
         closeables.push(transportService);
         recreateSeedHostsResolver(transportService);
 
-        final Logger logger = LogManager.getLogger(SeedHostsResolver.class);
         final MockLogAppender appender = new MockLogAppender();
-        appender.start();
         appender.addExpectation(
             new MockLogAppender.SeenEventExpectation(
                 getTestName(),
-                logger.getName(),
+                SeedHostsResolver.class.getCanonicalName(),
                 Level.WARN,
                 "timed out after [*] ([discovery.seed_resolver.timeout]=["
                     + SeedHostsResolver.getResolveTimeout(Settings.EMPTY)
@@ -334,15 +298,10 @@ public class SeedHostsResolverTests extends ESTestCase {
             )
         );
 
-        try {
-            Loggers.addAppender(logger, appender);
-            final List<TransportAddress> transportAddresses = seedHostsResolver.resolveHosts(Arrays.asList("hostname1", "hostname2"));
-
-            assertThat(transportAddresses, hasSize(1));
+        try (var ignored = appender.capturing(SeedHostsResolver.class)) {
+            assertThat(seedHostsResolver.resolveHosts(Arrays.asList("hostname1", "hostname2")), hasSize(1));
             appender.assertAllExpectationsMatched();
         } finally {
-            Loggers.removeAppender(logger, appender);
-            appender.stop();
             latch.countDown();
         }
     }
@@ -353,7 +312,7 @@ public class SeedHostsResolverTests extends ESTestCase {
         final CountDownLatch conditionLatch = new CountDownLatch(1);
         final Transport transport = new Netty4Transport(
             Settings.EMPTY,
-            Version.CURRENT,
+            TransportVersion.current(),
             threadPool,
             networkService,
             PageCacheRecycler.NON_RECYCLING_INSTANCE,
@@ -413,10 +372,10 @@ public class SeedHostsResolverTests extends ESTestCase {
         assertThat(FutureUtils.get(fut, 10, TimeUnit.SECONDS), hasSize(0));
     }
 
-    public void testInvalidHosts() throws IllegalAccessException {
+    public void testInvalidHosts() {
         final Transport transport = new Netty4Transport(
             Settings.EMPTY,
-            Version.CURRENT,
+            TransportVersion.current(),
             threadPool,
             new NetworkService(Collections.emptyList()),
             PageCacheRecycler.NON_RECYCLING_INSTANCE,
@@ -446,20 +405,17 @@ public class SeedHostsResolverTests extends ESTestCase {
         closeables.push(transportService);
         recreateSeedHostsResolver(transportService);
 
-        final Logger logger = LogManager.getLogger(SeedHostsResolver.class);
         final MockLogAppender appender = new MockLogAppender();
-        appender.start();
         appender.addExpectation(
             new MockLogAppender.SeenEventExpectation(
                 getTestName(),
-                logger.getName(),
+                SeedHostsResolver.class.getCanonicalName(),
                 Level.WARN,
                 "failed to resolve host [127.0.0.1:9300:9300]"
             )
         );
 
-        try {
-            Loggers.addAppender(logger, appender);
+        try (var ignored = appender.capturing(SeedHostsResolver.class)) {
             final List<TransportAddress> transportAddresses = seedHostsResolver.resolveHosts(
                 Arrays.asList("127.0.0.1:9300:9300", "127.0.0.1:9301")
             );
@@ -467,9 +423,6 @@ public class SeedHostsResolverTests extends ESTestCase {
             assertThat(transportAddresses.get(0).getAddress(), equalTo("127.0.0.1"));
             assertThat(transportAddresses.get(0).getPort(), equalTo(9301));
             appender.assertAllExpectationsMatched();
-        } finally {
-            Loggers.removeAppender(logger, appender);
-            appender.stop();
         }
     }
 }
