@@ -15,6 +15,7 @@ import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.inject.Inject;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
@@ -31,7 +32,6 @@ import org.elasticsearch.xpack.monitoring.exporter.Exporters;
 
 import java.util.Collection;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 public class TransportMonitoringBulkAction extends HandledTransportAction<MonitoringBulkRequest, MonitoringBulkResponse> {
 
@@ -49,7 +49,7 @@ public class TransportMonitoringBulkAction extends HandledTransportAction<Monito
         Exporters exportService,
         MonitoringService monitoringService
     ) {
-        super(MonitoringBulkAction.NAME, transportService, actionFilters, MonitoringBulkRequest::new);
+        super(MonitoringBulkAction.NAME, transportService, actionFilters, MonitoringBulkRequest::new, EsExecutors.DIRECT_EXECUTOR_SERVICE);
         this.threadPool = threadPool;
         this.clusterService = clusterService;
         this.exportService = exportService;
@@ -122,7 +122,7 @@ public class TransportMonitoringBulkAction extends HandledTransportAction<Monito
             return bulkDocs.stream()
                 .filter(bulkDoc -> bulkDoc.getSystem() != MonitoredSystem.UNKNOWN)
                 .map(this::createMonitoringDoc)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         /**
