@@ -43,7 +43,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class TransportMonitoringMigrateAlertsAction extends TransportMasterNodeAction<
     MonitoringMigrateAlertsRequest,
@@ -75,7 +74,7 @@ public class TransportMonitoringMigrateAlertsAction extends TransportMasterNodeA
             MonitoringMigrateAlertsRequest::new,
             indexNameExpressionResolver,
             MonitoringMigrateAlertsResponse::new,
-            ThreadPool.Names.MANAGEMENT
+            threadPool.executor(ThreadPool.Names.MANAGEMENT)
         );
         this.client = client;
         this.migrationCoordinator = migrationCoordinator;
@@ -113,10 +112,9 @@ public class TransportMonitoringMigrateAlertsAction extends TransportMasterNodeA
         ActionListener<MonitoringMigrateAlertsResponse> delegate
     ) {
         // Send failures to the final listener directly, and on success, fork to management thread and execute best effort alert removal
-        return ActionListener.wrap(
-            (response) -> threadPool.executor(ThreadPool.Names.MANAGEMENT)
-                .execute(ActionRunnable.wrap(delegate, (listener) -> afterSettingUpdate(listener, response))),
-            delegate::onFailure
+        return delegate.delegateFailure(
+            (l, response) -> threadPool.executor(ThreadPool.Names.MANAGEMENT)
+                .execute(ActionRunnable.wrap(l, (listener) -> afterSettingUpdate(listener, response)))
         );
     }
 
@@ -178,7 +176,7 @@ public class TransportMonitoringMigrateAlertsAction extends TransportMasterNodeA
      * @param remaining The counter used to determine if any other operations are in flight
      * @param results A thread-safe collection to hold results
      */
-    private ActionListener<ExporterResourceStatus> resultCollector(
+    private static ActionListener<ExporterResourceStatus> resultCollector(
         final Exporter.Config exporterConfig,
         final ActionListener<MonitoringMigrateAlertsResponse> listener,
         final AtomicInteger remaining,
@@ -215,7 +213,7 @@ public class TransportMonitoringMigrateAlertsAction extends TransportMasterNodeA
                                 compileReason(status)
                             )
                         )
-                        .collect(Collectors.toList());
+                        .toList();
                     MonitoringMigrateAlertsResponse response = new MonitoringMigrateAlertsResponse(collectedResults);
                     listener.onResponse(response);
                 } catch (Exception e) {
@@ -225,7 +223,7 @@ public class TransportMonitoringMigrateAlertsAction extends TransportMasterNodeA
                 }
             }
 
-            private Exception compileReason(ExporterResourceStatus status) {
+            private static Exception compileReason(ExporterResourceStatus status) {
                 // The reason for unsuccessful setup could be multiple exceptions: one or more watches
                 // may fail to be removed for any reason.
                 List<Exception> exceptions = status.getExceptions();
@@ -248,7 +246,7 @@ public class TransportMonitoringMigrateAlertsAction extends TransportMasterNodeA
      * @param exporter The exporter to migrate
      * @param listener Notified of success or failure
      */
-    private void deleteAlertsFromOpenExporter(Exporter exporter, ActionListener<ExporterResourceStatus> listener) {
+    private static void deleteAlertsFromOpenExporter(Exporter exporter, ActionListener<ExporterResourceStatus> listener) {
         assert exporter.isOpen();
         try {
             exporter.removeAlerts(status -> {
